--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: shell
 git:
   depth: 2
 
-script: ./script.sh
+script: ./ci/check.sh
 
 # For skip build pass commit with [skip <KEYWORD>] <KEYWORD> is ci or travis or travis ci or travis-ci or travisci
 #[skip <KEYWORD>]
