--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - sudo apt-get update
 
 install:
-  - sudo apt-get install cmake help2man libboost-dev libboost-program-options-dev libboost-python-dev libboost-regex-dev
+  - sudo apt-get install cmake help2man libboost-dev libboost-program-options-dev libboost-python-dev libboost-regex-dev tree
   - sudo apt-get install -y --force-yes csbuild
 ## End - 01
 
