--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ install:
   - sudo apt-get install -y --force-yes csbuild
 ## End - 01
 
-script: [[ $TRAVIS_PULL_REQUEST != "false" ]] && ./ci/check.sh
+script: if [ "$TRAVIS_PULL_REQUEST" != false ]; then ./ci/check.sh; fi
+
