--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,6 @@ install:
   - sudo apt-get install -y --force-yes csbuild
 ## End - 01
 
-script: [[ $TRAVIS_PULL_REQUEST != "false" ]] && ./ci/check_pr.sh
+script: 
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ./ci/check_pr.sh'
 #script: [[ $TRAVIS_PULL_REQUEST = "false" ]] && ./ci/check.sh
