--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: shell
+dist: trusty
 
 git:
   depth: 2
@@ -11,7 +12,7 @@ before_install:
   - sudo apt-get update
 
 install:
-  - sudo apt-get install cmake help2man libboost-dev libboost-program-options-dev libboost-python-dev libboost-regex-dev tree
+  - sudo apt-get install cmake help2man libboost-dev libboost-filesystem-dev libboost-program-options-dev libboost-python-dev libboost-regex-dev
   - sudo apt-get install -y --force-yes csbuild
 ## End - 01
 
