Fix missing 'fi'

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ install:
 ## End - 01
 
 script: 
-  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ./ci/check_pr.sh'
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ./ci/check_pr.sh; fi'
 #script: [[ $TRAVIS_PULL_REQUEST = "false" ]] && ./ci/check.sh
